--- a/index.html
+++ b/index.html
@@ -7,8 +7,26 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
+    <div class="color-switcher">
+        <div class="switcher-btn">
+            <i class="fas fa-cog"></i>
+        </div>
+            <h3>color switcher</h3>
+        <div class="theme-button-container">
+            <span class="theme-buttons" data-color="#8e44ad" style="background: #8e44ad"></span>
+            <span class="theme-buttons" data-color="#2980b9" style="background: #2980b9"></span>
+            <span class="theme-buttons" data-color="#f30c12" style="background: #f30c12"></span>
+            <span class="theme-buttons" data-color="#27ae60" style="background: #27ae60"></span>
+            <span class="theme-buttons" data-color="#ea2027" style="background: #ea2027"></span>
+            <span class="theme-buttons" data-color="#e84393" style="background: #e84393"></span>
+            <span class="theme-buttons" data-color="#ff4757" style="background: #ff4757"></span>
+            <span class="theme-buttons" data-color="#ffc312" style="background: #ffc312"></span>
+            <span class="theme-buttons" data-color="#17c0eb" style="background: #17c0eb"></span>
+        </div>
+    </div>
     <div class="container">
         <h1>Color switcher</h1>
     </div>
